--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "author": "",
   "type": "module",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "dev": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
